<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoportada">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_preferences"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.ccc.confiax.PreferencesActivity">

        <TextView
            android:id="@+id/nick"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="480dp"
            android:background="@drawable/textview_background"
            android:hint="Nick"
            android:textAlignment="center"
            android:textColor="@color/colorMauveTaupe"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031"
            tools:layout_conversion_absoluteHeight="34dp"
            tools:layout_conversion_absoluteWidth="163dp" />

        <TextView
            android:id="@+id/textView_howlong_period"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:width="60dp"
            android:gravity="center_vertical"
            android:text="@string/menstruation_length_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="182dp" />

        <EditText
            android:id="@+id/menstruation_length_value"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:width="0dp"
            android:enabled="false"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textColor="@color/colorMauveTaupe"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/period_length_value"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_howlong_period"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.743"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="33dp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:width="0dp"
            android:background="@drawable/button_rounded"
            android:onClick="menstruationLengthPlusOne"
            android:text="@string/button_plus_label"
            app:layout_constraintEnd_toStartOf="@+id/button15"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="82dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="4dp"
            android:width="0dp"
            android:background="@drawable/button_rounded"
            android:onClick="menstruationLengthMinusOne"
            android:text="@string/button_minus_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="82dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:width="60dp"
            android:gravity="center_vertical"
            android:text="@string/period_length_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="182dp" />

        <EditText
            android:id="@+id/period_length_value"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="96dp"
            android:width="0dp"
            android:enabled="false"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textColor="@color/colorMauveTaupe"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="33dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:width="0dp"
            android:background="@drawable/button_rounded"
            android:onClick="periodLengthPlusOne"
            android:text="@string/button_plus_label"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="82dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:width="0dp"
            android:background="@drawable/button_rounded"
            android:onClick="periodLengthMinusOne"
            android:text="@string/button_minus_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="82dp" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:width="60dp"
            android:gravity="center_vertical"
            android:text="@string/last_period_date_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="113dp" />

        <EditText
            android:id="@+id/last_period_date_value"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:width="0dp"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/colorMauveTaupe"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="126dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:width="0dp"
            android:background="@drawable/button_rounded"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_last_period_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="141dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/incoming_period_notification"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/incoming_period_notification_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="365dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fertile_days_notification"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/fertile_days_notification_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incoming_period_notification"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="365dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/ovulation_notification"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ovulation_notification_label"
            android:textColor="@color/colorMauveTaupe"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fertile_days_notification"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="365dp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:onClick="updatePreferences"
            android:text="@string/update_preferences"
            app:layout_constraintEnd_toStartOf="@+id/button11"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ovulation_notification"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="379dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:background="@drawable/button_rounded"
            android:onClick="clearPeriodCalendar"
            android:text="@string/clear_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ovulation_notification"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="379dp" />

        <ImageView
            android:id="@+id/photouser"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>